fix: scrollbar variants

--- a/src/App.css
+++ b/src/App.css
@@ -12,18 +12,13 @@
     }
 }
 
-@layer utilities {
-  @variants responsive {
-    /* Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
-    .no-scrollbar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-    }
-  }
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .big {
